testsuite/positive/Issue-git-0573.n
using System.Console;

public interface A
{
  public static F() : void
  {
    WriteLine("A.F");
  }
  
  protected internal static G() : void
  {
    WriteLine("A.G");
    H();
  }
  
  private static H() : void
  {
    WriteLine("A.H");
  }
}

A.F();
A.G();

/*
BEGIN-OUTPUT
A.F
A.G
A.H
END-OUTPUT
*/