testsuite/negative/Issue-git-0573.n
public interface A
{
  public static F() : void {} 
  protected static G() : void {}  // E: interface static methods cannot be 'protected', but can be 'protected internal'
  private static H() : void {}
  static I() : void {}
  
  public static X() : void; // E: missing body of a non-abstract and non-extern method in method A\.X\(\) : void
}

public class B : A
{
  public static CallG() : void
  {
    F(); // E: unbound name `F'
    G(); // E: unbound name `G'
    H(); // E: unbound name `H'
    I(); // E: unbound name `I'
    A.H(); // E: cannot access `A.H'
    A.I(); // E: cannot access `A.I'
  }
}

A.G(); // E: cannot access `A.G'
A.H(); // E: cannot access `A.H'
A.I(); // E: cannot access `A.I'